# eval

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  eval  player0_config.JSON  player1_config.JSON  player2_config.JSON  run_party.sh
include/: cmp.hpp  config.hpp  cot.hpp  dt_helper.hpp  factory.hpp  io.hpp  net.hpp  outsource_dt.h  prss.hpp  shuffle.hpp  shuffler.hpp  timer.hpp  types.hpp  utils.hpp
protocol/: dt.hpp  eval.hpp  evalv.hpp
src/: main.cpp  test_cmp.cpp  test_cot.cpp
